feat: creating endpoints update for products (#5)
* feat: creating endpoint PUT for products

* feat: creating endpoint PATCH for products

* docs: update swagger with new endpoints
